Fix overlapping footer

--- a/hettyversion/static/style.css
+++ b/hettyversion/static/style.css
@@ -25,7 +25,8 @@ body {
 }
 
 #content {
-	padding-top: 40px;
+    padding-top: 40px;
+    margin-bottom: 40px;
 }
 
 #footer {
